--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Branch";
+  src: url("/fonts/Branch.otf") format("opentype"),
+    url("/fonts/Branch.ttf") format("truetype");
+  /* You can add more variations here, such as font-weight or font-style */
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,6 +31,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.branch {
+  font-family: "Branch", serif;
 }
 
 .dot-black {
